[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scipts/Planet_StaticBody2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bug_RigidBody2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/NodeFollower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/better_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scipts/World_Node2D.gd" type="Script" id=6]
[ext_resource path="res://Images/Tiles/flag_01.png" type="Texture" id=7]
[ext_resource path="res://Images/Tiles/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://Images/Tiles/flag_02.png" type="Texture" id=9]
[ext_resource path="res://Scenes/InstructionPage.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Tree1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Images/Star/particleSmallStar.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 1000.0

[sub_resource type="CircleShape2D" id=2]
radius = 1800.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "flag_wave",
"speed": 2.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "arrow_right",
"speed": 5.0
} ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.27993, 1 ), -0.495173, -0.495173, 0, 0, Vector2( 0.77993, 1 ), -2.09688, -2.09688, 0, 0, Vector2( 0.99824, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 800, 500, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 0.1
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 6 )
hue_variation = 1.0

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 4 )

[node name="World_Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="GameOverWaitTimer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true

[node name="Planet_StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Planet_Sprite" type="Sprite" parent="Planet_StaticBody2D"]
visible = false

[node name="Planet_CollisionPolygon2D" type="CollisionShape2D" parent="Planet_StaticBody2D"]
shape = SubResource( 1 )

[node name="Gravity_Area2D" type="Area2D" parent="Planet_StaticBody2D"]
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )

[node name="Gravity_CollisionShape2D" type="CollisionShape2D" parent="Planet_StaticBody2D/Gravity_Area2D"]
shape = SubResource( 2 )

[node name="Bug_KinematicBody2D" parent="Planet_StaticBody2D" instance=ExtResource( 2 )]
position = Vector2( 0, -1200 )

[node name="BugFollower" parent="Planet_StaticBody2D" instance=ExtResource( 3 )]
position = Vector2( 0, -1200 )
target = NodePath("../Bug_KinematicBody2D")

[node name="GameCamera" type="Camera2D" parent="Planet_StaticBody2D/BugFollower"]
rotating = true
current = true
zoom = Vector2( 1.3, 1.3 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="PlayerSpawnPoint" type="Position2D" parent="Planet_StaticBody2D"]
position = Vector2( 0, -1200 )

[node name="BackgroundObjects" type="Node2D" parent="Planet_StaticBody2D"]

[node name="ArrowRight" type="AnimatedSprite" parent="Planet_StaticBody2D/BackgroundObjects"]
position = Vector2( 0, -1010 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "arrow_right"
playing = true

[node name="CheckPointFlag" type="AnimatedSprite" parent="Planet_StaticBody2D/BackgroundObjects"]
position = Vector2( 0, 1010 )
rotation = 3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "flag_wave"
playing = true

[node name="TestTree" parent="Planet_StaticBody2D" instance=ExtResource( 11 )]
position = Vector2( 288.325, -967.964 )
mass = 5.0
linear_damp = 0.0
angular_damp = 0.0

[node name="StarPivot" type="Position2D" parent="Planet_StaticBody2D"]

[node name="Particles2D" type="Particles2D" parent="Planet_StaticBody2D/StarPivot"]
position = Vector2( 0, -2300 )
amount = 300
lifetime = 3.0
visibility_rect = Rect2( -604.944, -512.049, 1200.41, 1004.85 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 12 )

[node name="DebugCamera" type="Camera2D" parent="."]
zoom = Vector2( 5, 5 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="TitlePage" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="GUI/TitlePage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.8174
margin_top = 63.4266
margin_right = -18.8174
margin_bottom = 84.4266
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameGUI" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GUI/InGameGUI"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 4 )
text = "SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionPage" parent="GUI" instance=ExtResource( 10 )]

[connection signal="timeout" from="GameOverWaitTimer" to="." method="_on_GameOverWaitTimer_timeout"]
[connection signal="body_exited" from="Planet_StaticBody2D/Gravity_Area2D" to="." method="_on_Gravity_Area2D_body_exited"]
[connection signal="bug_is_dead" from="Planet_StaticBody2D/Bug_KinematicBody2D" to="." method="_on_Bug_KinematicBody2D_bug_is_dead"]
[connection signal="score_point_reached" from="Planet_StaticBody2D/Bug_KinematicBody2D" to="." method="_on_Bug_KinematicBody2D_score_point_reached"]
[connection signal="pressed" from="GUI/TitlePage/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="hide_instruction" from="GUI/InstructionPage" to="." method="_on_InstructionPage_hide_instruction"]
